--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "express": "*",
+    "express-session": "^1.17.1",
     "mysql": "*",
+    "node-phpass": "^1.0.5",
     "socket.io": "*",
     "toastr": "*"
   }
